--- a/index.html
+++ b/index.html
@@ -1,72 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<meta charset="utf-8">  
-	<title>ComercialApp</title><!-- &ntilde; -->
-    <!-- development version, includes helpful console warnings -->
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<meta charset="UTF-8">
+	<title>VUEjs V2 AJAX vue-resource | Rimorsoft Online</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
-<body bgcolor="gray">
- 	<div>
- 	 <h1>Proyectos Jamz Software</h1>
+<body>
+	<div id="main" class="container">
+		<div class="row">
+			<div class="col-sm-4">
+				<h1>Lista VUEjs - AJAX</h1>
+				<ul class="list-group">
+					<li v-for="item in lists" class="list-group-item">						
+						{{ item.name.first }} {{ item.name.last }} {{ item.picture.large }} {{ item.login.username }}
+						{{ item.login.password }} {{ item.login.sha256 }}
+					</li>
 
- 	 <p><h3>DOCUMENTACIÓN: </h3></p>
-   		<ul>
-   			<li><a href="https://php.net" target="_blank">Manual de Referencia de PHP </a> </li>
-   			<li><a href="https://www.mariadb.org" target="_blank">Maria DB </a></li>
-   			<li><a href="https://www.postgresql.org" target="_blank">PostgreSQL </a></li>
-   			<li><a href="https://dev.mysql.com" target="_blank">MySQL </a></li>
-   			<li><a href="https://www.smarty.net" target="_blank"> SmartyPHP </a></li>
-   			<li><a href="https://www.w3schools.com/" target="_blank"> W3Schools </a></li>
-            <li><a href="https://www.templatespoint.net/" target="_blank"> templates Free  </a></li>
-            <li><a href="https://onepagelove.com/templates/html-templates/" target="_blank"> templates Free HTML </a></li>
-            <li><a href="https://vuejs.org/" target="_blank"> VUE JS </a></li>
-            <li><a href="https://codeigniter.com/docs" target="_blank"> CodeIgniter  3 AND 4 </a></li>
-            <li><a href="https://fontawesome.com/icons?d=gallery" target="_blank"> fontawesome  icons </a></li>
-            <li><a href="https://api.jquery.com/jquery.ajax/" target="_blank"> jQuery.ajax()   </a></li>
-            <li><a href="https://api.jquery.com/" target="_blank"> jQuery   </a></li>
-        </ul>
-   		<p><h3>Archivos del Proyecto </h3>ComercialApp Con SmartyPHP</p>
-   		<ul>
- 
-			<li><a href="login6.php" target="_blank"> ComercialApp Version 1 </a> </li>
-            <li><a href="sql/backup.php" target="_blank">backup</a> </li>
-            <li><a href="http://localhost/phpmyadmin" target="_blank">PHP My Admin</a> </li>
-            
-   		</ul>
- 	</div>
-    <div>
- <title>Hola mundo con Vue.js</title>
-
-
-<div class="container mt-5" id="app">
-
-    <h3>{{titulo}}</h3>
-
-    <input type="text" class="form-control my-3" v-model="nuevaTarea" v-on:keyup.enter="agregarTarea">
-    <button class="btn btn-primary" @click="agregarTarea">Agregar</button>
-
-    <div class="mt-3" v-for="(item, index) of tareas">
-
-      <div role="alert" 
-      :class="['alert', item.estado ? 'alert-success' : 'alert-danger']">
-        <div class="d-flex justify-content-between align-items-center">
-
-          <div>
-            {{index}} - {{item.nombre}} - {{item.estado}}
-          </div>
-          <div>
-            <button class="btn btn-success btn-sm" @click="editarTarea(index)">OK</button>
-            <button class="btn btn-danger btn-sm" @click="eliminar(index)">X</button>
-          </div>
-
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
-<script src="js/CAPP/01.js"></script>
+				</ul>
+			</div>
+			<div class="col-sm-8">
+				<h1>JSON</h1>
+				<pre>
+					{{ $data | json }}
+				</pre>
+			</div>
+		</div>
+	</div>
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.0/vue.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.1/vue-resource.min.js"></script>
+	<script src="js/CAPP/01.js"></script>
+	<script type="text/javascript">
+		
+	</script>
 </body>
 </html>
