commit para subir a hosting ok

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<h1>Lista VUEjs - AJAX</h1>
+				<div id="app-3">
+					<span v-if="seen">Ahora me ves</span>
+				  </div>
 				<ul class="list-group">
 					<li v-for="item in lists" class="list-group-item">						
 						{{ item.name.first }} {{ item.name.last }} {{ item.picture.large }} {{ item.login.username }}
